[修复]相关代码配置修复

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
   application:
     name: bg
   datasource:
-    url: jdbc:mysql://rm-wz9ov0f403gi9b9shro.mysql.rds.aliyuncs.com:3306/bg_data?useUnicode:true&characterEncoding:utf-8&zeroDateTimeBehavior:convertToNull&autoReconnect:true&useSSL:true
-    username: hyx
-    password: h8986345@
+    url: jdbc:mysql://:3306/bg_data?useUnicode:true&characterEncoding:utf-8&zeroDateTimeBehavior:convertToNull&autoReconnect:true&useSSL:true
+    username:
+    password:
     driver-class-name: com.mysql.cj.jdbc.Driver
 #pagehelper:
 #  helper-dialect: mysql
